[package]
name = "vesc"
version = "0.3.0"
authors = ["Ihor Kalnytskyi <ihor@kalnytskyi.com>"]
edition = "2024"
description = "A no-std/no-alloc implementation of the VESC® firmware communication protocol."
repository = "https://github.com/ikalnytskyi/vesc-rs"
license = "MIT"
keywords = ["embedded", "motor", "parser", "protocol", "vesc"]
categories = [
    "automotive",
    "embedded",
    "no-std",
    "no-std::no-alloc",
    "parser-implementations",
]

[features]
defmt = ["dep:defmt"]
std = ["bitflags/std", "thiserror/std"]

[dependencies]
bitflags = { version = "2.9" }
crc = { version = "3.3" }
defmt = { version = "1.0", optional = true }
thiserror = { version = "2.0", default-features = false }

[dev-dependencies]
googletest = "0.14"
